@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>536</width>
-    <height>197</height>
+    <height>264</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -127,6 +127,45 @@
     </widget>
    </item>
    <item>
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
+      <string>Playback</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>&amp;Player:</string>
+          </property>
+          <property name="buddy">
+           <cstring>player_combo</cstring>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QComboBox" name="player_combo"/>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
     <widget class="Line" name="line">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -156,6 +195,7 @@
   <tabstop>directory_edit</tabstop>
   <tabstop>recordQualityCombo</tabstop>
   <tabstop>recordFormatCombo</tabstop>
+  <tabstop>player_combo</tabstop>
   <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources/>
