@@ -1,5 +1,9 @@
 Version 1.1:
 
+(2012-03-26)
+ * Possibility to select the player (smplayer or mplayer, more can be added
+   in the future).
+
 (2012-03-25)
  * Add Portuguese translation.
 
